# Trade-Flow-Visualizer

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py
backend/app/: config.py  main.py
backend/app/models/: __init__.py  commodity.py  country.py  trade_flow.py
backend/app/routes/: commodities.py  countries.py  flows.py  shifts.py
backend/app/schemas/: __init__.py  commodity.py  country.py  flow.py  shift.py
backend/app/services/: aggregation_service.py  flow_service.py  shift_detector.py
backend/app/services/ingestion/: __init__.py  comtrade_adapter.py  oec_adapter.py  pipeline.py  reconciliation.py
backend/app/utils/: geo.py
backend/tests/: conftest.py
backend/tests/test_ingestion/: test_comtrade_adapter.py  test_pipeline.py
backend/tests/test_routes/: conftest.py  test_countries.py  test_flows.py  test_shifts.py
backend/tests/test_services/: conftest.py  test_flow_service.py  test_shift_detector.py
data/scripts/: seed_countries.py  seed_hs_mappings.py
data/static/: countries.json  hs_mappings.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js  commodities.js  countries.js  flows.js  shifts.js
frontend/src/context/: ExplorerContext.jsx
frontend/src/hooks/: useCountryProfile.js  useFlows.js  useSankey.js  useShifts.js  useTimeseries.js
(+33 files in other folders)
